[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sowing"
version = "0.0.1"
authors = [
    { name="Mattéo Delabre", email="git.matteo@delab.re" },
]
description = "sowing"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "immutables",
]

[project.urls]
"Homepage" = "https://github.com/matteodelabre/sowing"
"Bug Tracker" = "https://github.com/matteodelabre/sowing/issues"

[tool.hatch.build]
packages = [
    "src/sowing",
    "src/sowphy",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
]

[tool.hatch.envs.test.scripts]
run = "pytest --exitfirst"
